30-tools/monitoring/grafana-manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  labels:
    app: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: grafana-data
              mountPath: /var/lib/grafana
#            - name: grafana-conf
#              mountPath: /etc/grafana
      volumes:
        - name: grafana-data
          hostPath:
            path: /mnt/grafana-data  # 📌 Chemin de stockage sur l'hôte
            type: DirectoryOrCreate
        - name: grafana-conf
          hostPath:
            path: /mnt/grafana-conf  # 📌 Chemin de configuration sur l'hôte
            type: DirectoryOrCreate

---
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  type: ClusterIP
  selector:
    app: grafana
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
